[tool.poetry]
name = "syak"
version = "0.1.6"
description = "SiYuan sync to Anki"
authors = ["why8023 <whyniaaa@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/why8023/SYAK"
repository = "https://github.com/why8023/SYAK"
documentation = "https://github.com/why8023/SYAK"
keywords = ["Anki", "SiYuan"]

[tool.poetry.scripts]
syak = 'syak:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
markdown2 = "^2.4.6"
psutil = "^5.9.0"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
